revert changes to build.gradle